--- a/domains/design.html
+++ b/domains/design.html
@@ -11,21 +11,9 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-	
-	<!-- Zum Ausprobieren -->
-	<style>
-		.edit-button {
-			width: 40px;
-			height: 40px;
-		}
-		
-		.delete-button {
-			width: 40px;
-			height: 40px;
-		}
-	</style>
 </head>
 <body>
+	
 	<!-- Navigationsleiste -->
 	<nav class="navbar adin">
 		<a class="navbar-brand" href="../home/">
@@ -63,30 +51,23 @@
 	<!-- Haupt-Container -->
 	<div class="container-fluid">
 		
-		<h1 class="mt-3">Benutzer</h1>
+		<h1 class="mt-3">Domains</h1>
 		
 		<!-- Übersichtstabelle -->
 		<table class="overview-table">
 			<tr>
-				<th class="overview-table-content-cell">Voller Name</th>
-				<th class="overview-table-content-cell">Benutzername</th>
-				<th class="overview-table-content-cell">Email-Adresse</th>
-				<th class="overview-table-content-cell">Passwort</th>
-				<th class="overview-table-content-cell">Benutzer-Typ</th>
-				<th class="overview-table-content-cell">Berechtigt für Domains</th>
+				<th class="overview-table-content-cell">Domain-ID</th>
+				<th class="overview-table-content-cell">Domain-Name</th>
+				<th class="overview-table-content-cell">Domain-Admin</th>
+				<th class="overview-table-content-cell">Email-Adresse des Domain-Admins</th>
 				<th class="overview-table-button-cell"></th>
 				<th class="overview-table-button-cell"></th>
 			</tr>
 			<tr>
-				<td class="overview-table-content-cell">Markus Frank</td>
+				<td class="overview-table-content-cell">1</td>
+				<td class="overview-table-content-cell">test.dns.or.at</td>
 				<td class="overview-table-content-cell">mfrank</td>
 				<td class="overview-table-content-cell">mfrank@flashbrother.net</td>
-				<td class="overview-table-content-cell">************</td>
-				<td class="overview-table-content-cell">Delegated Admin</td>
-				<td class="overview-table-content-cell">
-					flashbrother.net<br>
-					test.dns.or.at<br>
-				</td>
 				<!-- TODO: Links müssen die ID der Domain enthalten, damit die Daten aus der Datenbank ausgelesen/gelöscht werden können! -->
 				<td class="overview-table-button-cell">
 					<a href="update.html" target="_blank">
@@ -103,7 +84,7 @@
 		
 		<a href="new.html" class="btn mt-5 adin-button overview-table-add-button">
 			<img src="../img/add.png" class="mr-3">
-			Neuen Benutzer hinzufügen
+			Neue Domain hinzufügen
 		</a>
 	</div>
 </body>
